--- a/MyPocketSBUX/MyPocketSBUX/Info.plist
+++ b/MyPocketSBUX/MyPocketSBUX/Info.plist
@@ -26,6 +26,10 @@
 	<string>LaunchScreen</string>
 	<key>UIMainStoryboardFile</key>
 	<string>Main</string>
+	<key>NSLocationWhenInUseUsageDescription</key>
+	<string>Do you give permission to this app ?</string>
+	<key>NSLocationAlwaysUsageDescription</key>
+	<string>Always Permit?</string>
 	<key>UIRequiredDeviceCapabilities</key>
 	<array>
 		<string>armv7</string>
